--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "metalsmith-headings-identifier": "0.0.3",
     "metalsmith-htmlescape": "^0.1.0",
     "metalsmith-markdown": "^0.2.1",
+    "metalsmith-metadata": "0.0.1",
     "metalsmith-metallic": "^0.3.1",
     "metalsmith-pagination": "^1.0.0",
     "metalsmith-permalinks": "^0.4.0",
